# SolanaNFTDapp

./: .gitignore  README.md
client/NFTClient/: NFTClient.csproj  Program.cs
client/NFTClient/Models/: NFTMetadata.cs
client/NFTClient/Services/: NFTService.cs  SolanaService.cs
client/NFTClient/Utils/: SolanaUtils.cs
docs/: DEVELOPMENT_GUIDE.md  DevelopmentChecklist.md  DevelopmentProgress.md  TECHNICAL.md
frontend/: README.md  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CreateNFTForm.tsx  NFTCard.tsx
frontend/src/contexts/: NFTContext.tsx
frontend/src/pages/: Home.tsx
frontend/src/services/: nftService.ts
frontend/src/utils/: solanaUtils.ts
nft-contract/: Cargo.toml
nft-contract/src/: error.rs  instruction.rs  lib.rs  state.rs  test.rs
